# EntranceManagement

./: Answers.md  Card Numbers.txt  LED_Arduino.pdsprj  LED_Arduino.pdsprj.DESKTOP-9TSFRG3.Fateme.workspace  LED_Arduino.pdsprj.DESKTOP-T41DK17.Asus2023.workspace  README.md  RFID_Arduino.pdsprj  RFID_Arduino.pdsprj.DESKTOP-9TSFRG3.Fateme.workspace
Project Backups/: LED_Arduino [Autosaved].pdsprj  RFID_Arduino [Autosaved].pdsprj
Proteus/: LED_Arduino.pdsprj.DESKTOP-9TSFRG3.Fateme.workspace  LED_Arduino.pdsprj.DESKTOP-T41DK17.Asus2023.workspace  RFID_Arduino.pdsprj  RFID_Arduino.pdsprj.DESKTOP-9TSFRG3.Fateme.workspace
Proteus/Project Backups/: LED_Arduino [20240430, 15-49-06].pdsprj  LED_Arduino [20240501, 08-11-31].pdsprj  RFID_Arduino [20240429, 05-29-06].pdsprj  RFID_Arduino [20240429, 09-17-11].pdsprj
Server/webserver/: httpserver.cpp  httpserver.h  main.cpp  user.cpp  webapplication.cpp  webapplication.h  websocket.cpp  websocket.h
arduino_RFID_code/: arduino_RFID_code.ino
arduino_TakeAction_code/: arduino_TakeAction_code.ino
webserver/: CMakeLists.txt  httpserver.cpp  httpserver.h  main.cpp  user.h  webapplication.cpp  webapplication.h  websocket.cpp  websocket.h
